--- a/landingPage.html
+++ b/landingPage.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    // hacked by shafwan
-    
+// hacked by shafwan
+// edited by Zulfan
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
